--- a/RP_CardAPI/RP_CardAPI/RP_CardAPI.csproj
+++ b/RP_CardAPI/RP_CardAPI/RP_CardAPI.csproj
@@ -51,6 +51,18 @@
       <HintPath>..\packages\EntityFramework.6.4.4\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Microsoft.IdentityModel.JsonWebTokens, Version=6.15.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.IdentityModel.JsonWebTokens.6.15.1\lib\net472\Microsoft.IdentityModel.JsonWebTokens.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.IdentityModel.Logging, Version=6.15.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.IdentityModel.Logging.6.15.1\lib\net472\Microsoft.IdentityModel.Logging.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.IdentityModel.Tokens, Version=6.15.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.IdentityModel.Tokens.6.15.1\lib\net472\Microsoft.IdentityModel.Tokens.dll</HintPath>
+    </Reference>
+    <Reference Include="System.IdentityModel.Tokens.Jwt, Version=6.15.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.IdentityModel.Tokens.Jwt.6.15.1\lib\net472\System.IdentityModel.Tokens.Jwt.dll</HintPath>
+    </Reference>
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
@@ -122,11 +134,16 @@
     <Compile Include="Cards.cs">
       <DependentUpon>CardManagerModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Controllers\AuthenticationController.cs" />
     <Compile Include="Controllers\CreateCardController.cs" />
     <Compile Include="Controllers\PaymentController.cs" />
     <Compile Include="Fees.cs">
       <DependentUpon>CardManagerModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Filters\AddChallengeOnUnauthorizedResult.cs" />
+    <Compile Include="Filters\AuthenticationFailureResult.cs" />
+    <Compile Include="Filters\HttpAuthenticationChallengeContextExtensions.cs" />
+    <Compile Include="Filters\JwtAuthenticationAttribute.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -135,19 +152,30 @@
     <Compile Include="Models\OwnerInfo.cs" />
     <Compile Include="Models\PaymentDetails.cs" />
     <Compile Include="Models\Payment.cs" />
+    <Compile Include="Models\User.cs" />
+    <Compile Include="Payments.cs">
+      <DependentUpon>CardManagerModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\Implementations\CardDataAccess.cs" />
     <Compile Include="Providers\Implementations\PaymentDataAccess.cs" />
     <Compile Include="Providers\Interfaces\ICardDataAccess.cs" />
     <Compile Include="Providers\Interfaces\IPaymentDataAccess.cs" />
-    <Compile Include="Purchase.cs">
-      <DependentUpon>CardManagerModel.tt</DependentUpon>
-    </Compile>
     <Compile Include="Providers\CardDataAccessFactory.cs" />
+    <Compile Include="Providers\PaymentDataAccessFactory.cs" />
+    <Compile Include="Repositories\Implementations\AuthenticationManager.cs" />
     <Compile Include="Repositories\Implementations\PaymentManager.cs" />
+    <Compile Include="Repositories\Interfaces\IAuthenticationManager.cs" />
     <Compile Include="Repositories\Interfaces\ICreationManager.cs" />
     <Compile Include="Repositories\Implementations\CreationManager.cs" />
     <Compile Include="Repositories\Interfaces\IPaymentManager.cs" />
+    <Compile Include="Services\JwtManager.cs" />
+    <Compile Include="Services\UFEScheduler.cs" />
+    <Compile Include="Services\UniversalFeeExchange.cs" />
+    <Compile Include="Users.cs">
+      <DependentUpon>CardManagerModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="UsesCases\AuthenticationUseCase.cs" />
     <Compile Include="UsesCases\CreateCardUseCase.cs" />
     <Compile Include="UsesCases\PaymentUseCase.cs" />
   </ItemGroup>
